syntax="proto3";

service KVStore {
    rpc Put(PutRequest) returns (PutResponse) {}
    rpc Get(GetRequest) returns (GetResponse) {}
}

message PutRequest {
    string key=1;
    string value=2;
}

message PutResponse {
    string error=1;

    bool is_redirect=2;
    string redirect_server=3;
}

message GetRequest {
    string key=1;
}

message GetResponse {
    bool key_exists=1;
    string key=2;
    string value=3;

    bool is_redirect=4;
    string redirect_server=5;
}